--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
                             <q>Assertividade, Agilidade e Beleza essa é a forma como vemos o trabalho da Paloma aqui no Jardim do Cajueiro. Com uma comunicação impecável, a Paloma nos apresentou o projeto de forma nítida e objetiva. Uma arquiteta completa com uma visão ampla. Ela superou todas as nossas expectativas.</q>
                             <p>Escola Waldorf Comunitária Jardim do Cajueiro</p>
                         </div>
+                        <div class="textslide" id="textslide6">
+                            <q>A “casa rosa” um dia apareceu, horrível, desfigurada por anos de uso comercial. Aluguei sem pestanejar, pois sabia que podia contar com alguém que peitasse a revitalização daqueles cômodos disformes. Fiz as contas e disse para a Paloma: ficarei aqui por três anos (acho que ao final foram seis), quero que sejam gloriosos! Ela respeitou meu budget e transformou o imóvel em uma residência tão acolhedora que era difícil terminar uma festa, ninguém ia embora.</q>
+                            <p>Fábio Mortari</p>
+                        </div>
                     </div>
                     <div class="slider2-nav">
                         <a class="dot2" onclick="currentSlide(1)" ></a>
@@ -132,6 +136,7 @@
                         <a class="dot2" onclick="currentSlide(3)" ></a>
                         <a class="dot2" onclick="currentSlide(4)" ></a>
                         <a class="dot2" onclick="currentSlide(5)" ></a>
+                        <a class="dot2" onclick="currentSlide(6)" ></a>
                     </div>
                 <a class="next" id="arrowSlider2" onclick="plusSlides(1)">&#10095;</a> 
             </div>            
