--- a/ministeriopp.html
+++ b/ministeriopp.html
@@ -39,7 +39,7 @@
         <div class="sobre">
             <div class="title">
                 <span>SEDE DO</span>
-                <p> MINISTÉRIO <br>PÚBLICO <br>DA PARAÍBA</p>
+                <p>MINISTÉRIO <br>PÚBLICO <br>DA PARAÍBA</p>
             </div>
             <div class="about">
                 <h2>CONCURSO</h2>
@@ -55,49 +55,44 @@
             </div>
         </div>
         <div class="frame1">
-            <img src="./assets/ceagesp/frame1.jpg" alt="imagem capa projeto ceagesp">
+            <img src="./assets/ministeriopp/frame1.jpg" alt="imagem capa projeto ministeriopp">
         </div>
         <div class="about-quote">
-            <p>Área localizada em um importante eixo de desenvolvimento urbano ao longo do Rio Pinheiros, na capital Paulista, que atualmente configura uma barreira urbana e polo gerador de tráfego.
+            <p>Objeto do edital divulgado pelo Ministério Público da Paraíba, o concurso nacional para a contratação de Ante-Projeto de arquitetura destinado à sede da entidade em João Pessoa, Paraíba, em terreno de 23.788,10m², com área edificável de 24.000m², e custo total estimado para as obras de até R$ 60.000.000,00.
+
                 <br> <br>
-                A proposta consiste no planejamento do desenvolvimento urbano de qualidade visando a oferta de um novo território integrado à cidade existente e baseado em conceitos contemporâneos de urbanismo sustentável.</p>
-        </div>
-        <div class="frame3">
-            <img src="./assets/ceagesp/frame2.jpg" alt="imagem projeto ceagesp">
-            <img src="./assets/ceagesp/frame3.jpg" alt="imagem projeto ceagesp">
-        </div>
-        <div class="about-quote2">
-            <p>O estudo realizado teve como base a análise geral do território com modelagem econômica e jurídica realizadas pelo cliente.</p>
+                Para a avaliação das propostas, foram estabelecidos critérios de boa qualidade arquitetônica, legalidade, boa técnica, exequibilidade, viabilidade econômica e atendimento às diretrizes e recomendações presentes nas bases do concurso, tendo como maior desafio o extenso programa arquitetônico.</p>
         </div>
         <div class="container-slider">
             <div class="slider-wrapper">
                 <a class="prev" id="arrowSlider1" onclick="plusSlides(-1)">&#10094;</a>
                 <div class="slider">
-                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ceagesp/slide1.png" alt="imagem projeto ceagesp"></div>
-                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ceagesp/slide2.png" alt="imagem projeto ceagesp"></div>
-                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ceagesp/slide3.png" alt="imagem projeto ceagesp"></div>
-                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ceagesp/slide4.png" alt="imagem projeto ceagesp"></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ministeriopp/slide1.png" alt="imagem projeto ministeriopp"></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ministeriopp/slide2.png" alt="imagem projeto ministeriopp"></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ministeriopp/slide3.png" alt="imagem projeto ministeriopp"></div>
                 </div>
                 <div class="slider1-nav">
                     <a class="dot2" onclick="currentSlide(1)" ></a>
                     <a class="dot2" onclick="currentSlide(2)" ></a>
                     <a class="dot2" onclick="currentSlide(3)" ></a>
-                    <a class="dot2" onclick="currentSlide(4)" ></a>
                 </div>
             <a class="next" id="arrowSlider1" onclick="plusSlides(1)">&#10095;</a> 
             </div>
 
         </div>
-        <div class="frame3">
-            <img src="./assets/ceagesp/frame4.jpg" alt="imagem projeto ceagesp">
+        <div class="about-quote2">
+            <p>O projeto visa criar uma arquitetura gentil, simbolizada pela relação respeitosa com a cidade e a cidadania. Priorizando o respeito ao meio ambiente e aos cidadãos, a proposta busca integrar o edifício ao entorno, contribuindo para a vitalidade urbana através de praças, pátios, texturas e volumetrias. O edifício, perceptível à escala das avenidas, revela sua delicadeza de perto.</p>
+        </div>
+        <div class="frame1">
+            <img src="./assets/ministeriopp/frame2.jpg" alt="imagem projeto ministeriopp">
         </div>
         <div class="about-quote2">
-            <p>Em nossa proposta, buscamos a indução da transformação urbana da área de forma articulada com seu entorno, dentro de um conceito de cidade compacta, complexa e sustentável. Para alcançar este objetivo equilibramos as densidades no território, diversificamos o uso do solo e hierarquizamos o sistema viário, de forma que se privilegiasse os modos não motorizados e o transporte coletivo.
-                Propusemos também a ampliação da permeabilidade do solo e incremento das áreas verdes ao longo da hidrografia local. Por fim, interconectamos a área projetada e seu entorno ativando a requalificação ambiental.</p>
+            <p>O sistema estrutural e construtivo é simples, destacando-se nas estratégias para captar luz natural sem comprometer o conforto térmico, aproveitando a ventilação natural. O edifício é concebido como uma máquina bioclimática eficiente e sofisticada, embora simples e acessível.
+                <br><br>
+                O partido arquitetônico integra a proposta simbólica com o desafio bioclimático, considerando minuciosamente as características do clima local. Destaca-se tecnicamente o sistema de cúpulas invertidas de seção parabólica para proteção do telhado, feito de material leve e acessível. Este sistema multifuncional visa economia de espaço, introdução de luz natural controlada, aquecimento solar da água, alimentação de um sistema de condicionamento de ar, ventilação por chaminé solar e coleta de água da chuva para reaproveitamento no edifício.</p>
         </div>
-        <div class="frame6">
-            <img src="./assets/ceagesp/frame5.jpg" alt="imagem projeto ceagesp">
-        </div>
+        <div class="frame1">
+            <img src="./assets/ministeriopp/frame3.jpg" alt="imagem projeto ministeriopp">        </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
         </div>
