--- a/pilatesbrazil.html
+++ b/pilatesbrazil.html
@@ -149,7 +149,7 @@
                 <li class="card"><div class="textslide" id="textslide11">
                     <h1>ANNEXE</h1>
                     <h2>2007</h2>
-                    <a href="#home"><img draggable="false" src="./assets/projeto-110.png" alt="link projeto annexe"></a>
+                    <a href="#home"><img draggable="false" src="./assets/projeto-110.webp" alt="link projeto annexe"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
@@ -167,9 +167,30 @@
                     <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                     <h4>CONCURSO</h4>
                 </div></li>
+                <li class="card"><div class="textslide" id="textslide14">
+                    <h1>MPPB</h1>
+                    <h2>2013</h2>
+                    <a target="_blank" href="ministeriopp.html"><img draggable="false" src="./assets/projeto-140.png" alt="link projeto MPPB"></a>
+                    <h3>-</h3>
+                    <h4>CONCURSO</h4>
+                </div></li>
+                <li class="card"><div class="textslide" id="textslide15">
+                    <h1>CEAGESP</h1>
+                    <h2>2013</h2>
+                    <a target="_blank" href="ceagesp.html"><img draggable="false" src="./assets/projeto-150.png" alt="link projeto ceagesp"></a>
+                    <h3>-</h3>
+                    <h4>URBANISMO</h4>
+                </div></li>
+                <li class="card"><div class="textslide" id="textslide16">
+                    <h1>ARCO DO TIETE</h1>
+                    <h2>2013</h2>
+                    <a target="_blank" href="arco.html"><img draggable="false" src="./assets/projeto-160.png" alt="link projeto arco do tiete"></a>
+                    <h3>-</h3>
+                    <h4>URBANISMO</h4>
+                </div></li>
             </ul>  
             <i id="next2" id="arrowSlider2" onclick="plusSlides(1)">&#10095;</i>        
-        </div>  
+        </div>    
     </main>
 <footer>
     <div class="grid-footer">
