--- a/projetos.html
+++ b/projetos.html
@@ -149,6 +149,28 @@
                         <h4>CONCURSO</h4>
                     </div>
             </div>
+            <div class="container6">
+                <div class="card14">
+                    <h1>MPPB</h1>
+                    <h2>2013</h2>
+                    <a target="_blank" href="ministeriopp.html"><img src="assets/projeto-140.png" alt="link projeto MINISTÉRIO PÚBLICO DA PARAÍBA"></a>
+                    <h4>CONCURSO</h4>
+                </div>
+            </div>
+            <div class="container8">
+                <div class="card15">
+                        <h1>CEAGESP</h1>
+                        <h2>2013</h2>
+                        <a target="_blank" href="ceagesp.html"><img src="assets/projeto-150.png" alt="link projeto ceagesp"></a>
+                        <h4>URBANISMO</h4>
+                        </div>
+                    <div class="card16">
+                        <h1>ARCO DO TIETÊ</h1>
+                        <h2>2013</h2>
+                        <a target="_blank" href="arco.html"><img src="./assets/projeto-160.png" alt="link projeto arco"></a>
+                        <h4>URBANISMO</h4>
+                    </div>
+            </div>
         </div>
         <div class="contato" id="contato">
             <h1>CONTATO</h1>
