--- a/arco.html
+++ b/arco.html
@@ -51,6 +51,7 @@
                 <span><br>Ano:
                 </span>2013
                 </p>
+                <br><span style="font-weight: bold;font-size: 14px;">Publicado em:</span><a href="https://www.capital.sp.gov.br/noticia/prefeitura-apresenta-as-17-propostas-recebidas">Cidade de São Paulo</a>
             </div>
         </div>
         <div class="frame1">
