caroussel proj mod .

--- a/asacciones.html
+++ b/asacciones.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="asacciones.css">
+    <link rel="stylesheet" href="swiper-bundle.min.css">
     <title>ASACCIONES - Paloma Siqueira</title>
     <link rel="shortcut icon" href="./assets/ICONPALOMA.png" type="image/x-icon">
     <meta name="author" content="Flavia Sigoli"/>
@@ -90,124 +91,152 @@
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
         </div>
-        <div class="slider2-wrapper">
-            <i id="prev2" id="arrowSlider2" onclick="plusSlides(-1)">&#10094;</i>
-            <ul class="carousel">
-                <li class="card"><div class="textslide" id="textslide1">
-                    <h1>CASA JC66</h1>
-                    <h2>2012</h2>
-                    <a target="_blank" href="casajc66.html"><img draggable="false" src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66" draggable="false"></a>
-                    <h3>FOTOS: ANA MELLO</h3>
-                    <h4>EDIFICAÇÃO NOVA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide2">
-                    <h1>CASA OXALÁ I</h1>
-                    <h2>2016</h2>
-                    <a target="_blank" href="vilaoxalai.html"><img draggable="false" src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1" draggable="false"></a>
-                    <h3>FOTOS: OKA FOTOGRAFIA</h3>
-                    <h4>EDIFICAÇÃO NOVA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide3">
-                    <h1>CASA OXALÁ II</h1>
-                    <h2>2017</h2>
-                    <a target="_blank" href="vilaoxalaii.html"><img draggable="false" src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2" draggable="false"></a>                    
-                    <h3>FOTOS: OKA FOTOGRAFIA</h3>
-                    <h4>EDIFICAÇÃO NOVA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide4">
-                    <h1>CASA MILANO</h1>
-                    <h2>2017</h2>
-                    <a target="_blank" href="casamilano.html"><img draggable="false" src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano" draggable="false"></a>
-                    <h3>FOTOS: OKA FOTOGRAFIA</h3>
-                    <h4>EDIFICAÇÃO NOVA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide5">
-                    <h1>ODOYÁ LOUNGE</h1>
-                    <h2>2017</h2>
-                    <a target="_blank" href="odoyalouge.html"><img draggable="false" src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
-                    <h3>FOTOS: OKA FOTOGRAFIA</h3>
-                    <h4>EDIFICAÇÃO NOVA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide6">
-                    <h1>CASA BP</h1>
-                    <h2>2004</h2>
-                    <a target="_blank" href="casabp.html"><img draggable="false" src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp" draggable="false"></a>
-                    <h3>FOTOS: CAROLINA RIBEIRO</h3>
-                    <h4>REFORMA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide7">
-                    <h1>CASA LB</h1>
-                    <h2>2006</h2>
-                    <a target="_blank" href="casalb.html"><img draggable="false" src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb" draggable="false"></a>
-                    <h3>FOTOS: PIPO GIALLUISI</h3>
-                    <h4>REFORMA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide8">
-                    <h1>ATELIÊ LV</h1>
-                    <h2>2006</h2>
-                    <a target="_blank" href="atelielv.html"><img draggable="false" src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
-                    <h3>FOTOS: PIPO GIALLUISI</h3>
-                    <h4>EDIFICAÇÃO NOVA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide9">
-                    <h1>BOM, CAFÉ</h1>
-                    <h2>2006</h2>
-                    <a target="_blank" href="bomcafe.html"><img draggable="false" src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café" draggable="false"></a>
-                    <h3>FOTOS: PIPO GIALLUISI</h3>
-                    <h4>REFORMA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide10">
-                    <h1>THE PILATES STUDIO BRAZIL</h1>
-                    <h2>2006</h2>
-                    <a target="_blank" href="pilatesbrazil.html"><img draggable="false" src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil" draggable="false"></a>
-                    <h3>FOTOS: PIPO GIALLUISI</h3>
-                    <h4>REFORMA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide11">
-                    <h1>ANNEXE</h1>
-                    <h2>2007</h2>
-                    <a href="#home"><img draggable="false" src="./assets/projeto-110.webp" alt="link projeto annexe"></a>
-                    <h3>FOTOS: PIPO GIALLUISI</h3>
-                    <h4>REFORMA</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide12">
-                    <h1>ASACCIONES</h1>
-                    <h2>2011</h2>
-                    <a target="_blank" href="asacciones.html"><img draggable="false" src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
-                    <h3>COLOCAÇÃO: 1ºLUGAR</h3>
-                    <h4>CONCURSO</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide13">
-                    <h1>RENOVA SP</h1>
-                    <h2>2007</h2>
-                    <a target="_blank" href="renovasp.html"><img draggable="false" src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
-                    <h3>COLOCAÇÃO: 1ºLUGAR</h3>
-                    <h4>CONCURSO</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide14">
-                    <h1>MPPB</h1>
-                    <h2>2013</h2>
-                    <a target="_blank" href="ministeriopp.html"><img draggable="false" src="./assets/projeto-140.png" alt="link projeto MPPB"></a>
-                    <h3>-</h3>
-                    <h4>CONCURSO</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide15">
-                    <h1>CEAGESP</h1>
-                    <h2>2013</h2>
-                    <a target="_blank" href="ceagesp.html"><img draggable="false" src="./assets/projeto-150.png" alt="link projeto ceagesp"></a>
-                    <h3>-</h3>
-                    <h4>URBANISMO</h4>
-                </div></li>
-                <li class="card"><div class="textslide" id="textslide16">
-                    <h1>ARCO DO TIETE</h1>
-                    <h2>2013</h2>
-                    <a target="_blank" href="arco.html"><img draggable="false" src="./assets/projeto-160.png" alt="link projeto arco do tiete"></a>
-                    <h3>-</h3>
-                    <h4>URBANISMO</h4>
-                </div></li>
-            </ul>  
-            <i id="next2" id="arrowSlider2" onclick="plusSlides(1)">&#10095;</i>        
-        </div>       
+        <swiper-container class="mySwiper slider2-wrapper" init="false" auto-height="true" space-between="10" navigation="true">
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide1">
+                <h1>CASA JC66</h1>
+                <h2>2012</h2>
+                <a target="_blank" href="casajc66.html"><img draggable="false" src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66" draggable="false"></a>
+                <h3>FOTOS: ANA MELLO</h3>
+                <h4>EDIFICAÇÃO NOVA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide2">
+            <h1>CASA OXALÁ I</h1>
+            <h2>2016</h2>
+            <a target="_blank" href="vilaoxalai.html"><img draggable="false" src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1" draggable="false"></a>
+            <h3>FOTOS: OKA FOTOGRAFIA</h3>
+            <h4>EDIFICAÇÃO NOVA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide3">
+                <h1>CASA OXALÁ II</h1>
+                <h2>2017</h2>
+                <a target="_blank" href="vilaoxalaii.html"><img draggable="false" src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2" draggable="false"></a>                    
+                <h3>FOTOS: OKA FOTOGRAFIA</h3>
+                <h4>EDIFICAÇÃO NOVA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide4">
+                <h1>CASA MILANO</h1>
+                <h2>2017</h2>
+                <a target="_blank" href="casamilano.html"><img draggable="false" src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano" draggable="false"></a>
+                <h3>FOTOS: OKA FOTOGRAFIA</h3>
+                <h4>EDIFICAÇÃO NOVA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide5">
+                <h1>ODOYÁ LOUNGE</h1>
+                <h2>2017</h2>
+                <a target="_blank" href="odoyalouge.html"><img draggable="false" src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
+                <h3>FOTOS: OKA FOTOGRAFIA</h3>
+                <h4>EDIFICAÇÃO NOVA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide6">
+                <h1>CASA BP</h1>
+                <h2>2004</h2>
+                <a target="_blank" href="casabp.html"><img draggable="false" src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp" draggable="false"></a>
+                <h3>FOTOS: CAROLINA RIBEIRO</h3>
+                <h4>REFORMA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide7">
+                <h1>CASA LB</h1>
+                <h2>2006</h2>
+                <a target="_blank" href="casalb.html"><img draggable="false" src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb" draggable="false"></a>
+                <h3>FOTOS: PIPO GIALLUISI</h3>
+                <h4>REFORMA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide8">
+                <h1>ATELIÊ LV</h1>
+                <h2>2006</h2>
+                <a target="_blank" href="atelielv.html"><img draggable="false" src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
+                <h3>FOTOS: PIPO GIALLUISI</h3>
+                <h4>EDIFICAÇÃO NOVA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide9">
+                <h1>BOM, CAFÉ</h1>
+                <h2>2006</h2>
+                <a target="_blank" href="bomcafe.html"><img draggable="false" src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café" draggable="false"></a>
+                <h3>FOTOS: PIPO GIALLUISI</h3>
+                <h4>REFORMA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide10">
+                <h1>THE PILATES STUDIO BRAZIL</h1>
+                <h2>2006</h2>
+                <a target="_blank" href="pilatesbrazil.html"><img draggable="false" src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil" draggable="false"></a>
+                <h3>FOTOS: PIPO GIALLUISI</h3>
+                <h4>REFORMA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide11">
+                <h1>ANNEXE</h1>
+                <h2>2007</h2>
+                <a href="#home"><img draggable="false" src="./assets/projeto-110.webp" alt="link projeto annexe"></a>
+                <h3>FOTOS: PIPO GIALLUISI</h3>
+                <h4>REFORMA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide12">
+                <h1>ASACCIONES</h1>
+                <h2>2011</h2>
+                <a target="_blank" href="asacciones.html"><img draggable="false" src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
+                <h3>COLOCAÇÃO: 1ºLUGAR</h3>
+                <h4>CONCURSO</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide13">
+                <h1>RENOVA SP</h1>
+                <h2>2007</h2>
+                <a target="_blank" href="renovasp.html"><img draggable="false" src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
+                <h3>COLOCAÇÃO: 1ºLUGAR</h3>
+                <h4>CONCURSO</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide14">
+                <h1>MPPB</h1>
+                <h2>2013</h2>
+                <a target="_blank" href="ministeriopp.html"><img draggable="false" src="./assets/projeto-140.png" alt="link projeto MPPB"></a>
+                <h3>-</h3>
+                <h4>CONCURSO</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide15">
+                <h1>CEAGESP</h1>
+                <h2>2013</h2>
+                <a target="_blank" href="ceagesp.html"><img draggable="false" src="./assets/projeto-150.png" alt="link projeto ceagesp"></a>
+                <h3>-</h3>
+                <h4>URBANISMO</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide16">
+                <h1>ARCO DO TIETE</h1>
+                <h2>2013</h2>
+                <a target="_blank" href="arco.html"><img draggable="false" src="./assets/projeto-160.png" alt="link projeto arco do tiete"></a>
+                <h3>-</h3>
+                <h4>URBANISMO</h4>
+            </div>
+          </swiper-slide>
+          </swiper-container>
     </main>
 <footer>
     <div class="grid-footer">
@@ -230,5 +259,36 @@
     <div class="copyright"> <p>Copyright © 2021 Paloma Siqueira</p> </div>
 </footer>
 <script src="script-proj.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+
+<script>
+  const swiperEl = document.querySelector('swiper-container')
+  Object.assign(swiperEl, {
+    slidesPerView: 2,
+    spaceBetween: 10,
+    loop: true,
+    autoplay: true,
+    breakpoints: {
+      600: {
+        slidesPerView: 2,
+        spaceBetween: 20,
+      },
+      968: {
+        slidesPerView: 4,
+        spaceBetween: 40,
+      },
+      1224: {
+        slidesPerView: 6,
+        spaceBetween: 50,
+      },
+    },
+    navigation: {                       //navigation(arrows)
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+    },
+  });
+  swiperEl.initialize();
+</script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@8.4.7/swiper-bundle.min.js"></script>
 </body>
 </html>
