--- a/vilaoxalai.html
+++ b/vilaoxalai.html
@@ -48,6 +48,7 @@
                 <br>Área do terreno: 1450m2
                 <br>Área construída: 222m2
                 <br>Execução: Luiz Costa e Gilberto Araújo </p>
+            <br><span style="font-weight: bold;font-size: 14px;">Publicado em:</span><a href="https://www.archdaily.com.br/br/998187/vila-oxala-i-paloma-siqueira-arquiteta?ad_source=search&ad_medium=projects_tab">Archdaily</a>
             </div>
         </div>
         <div class="frame1">
