--- a/pousadasabina.html
+++ b/pousadasabina.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="casajc66.css">
+    <link rel="stylesheet" href="pousadasabina.css">
     <link rel="stylesheet" href="swiper-bundle.min.css">
-    <title>Casa JC66 - Paloma Siqueira</title>
+    <title>Pousada Sabina - Paloma Siqueira</title>
     <link rel="shortcut icon" href="./assets/ICONPALOMA.png" type="image/x-icon">
     <meta name="author" content="Flavia Sigoli"/>
     <meta http-equiv="content-language" content="pt-br, en-US" />
@@ -21,7 +21,7 @@
 <body>
     <header id="home">
         <div class="menu-logo">
-                <a href="index.html"><img src="./assets/Frame48.jpg" alt=""></a>
+                <a href="palomasiqueiraarquiteta.com/"><img src="./assets/Frame48.jpg" alt=""></a>
         </div>
         <nav class="navbar">
             <a href="#" class="btn-toggle">
@@ -30,15 +30,15 @@
                 <span class="bar"></span>
             </a>
             <div class="menu-links">
-                <a href="index.html"> Início </a>
+                <a href="palomasiqueiraarquiteta.com/"> Início </a>
                 <a href="./projetos.html"> Projetos </a>
-                <a href="index.html#sobre"> Sobre </a>
+                <a href="palomasiqueiraarquiteta.com/#sobre"> Sobre </a>
                 </div>
         </nav>
     </header>
     <main>
         <div class="sobre">
-            <div class="title"><p>CASA <br> JC66</p></div>
+            <div class="title"><p>Pousada <br> SABINA</p></div>
             <div class="about">
                 <h2>EDIFICAÇÃO NOVA</h2>
                 <h3>FOTOS POR ANA MELLO</h3>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="frame1">
-            <img src="./assets/casajc66/frame1.webp" alt="imagem capa Casa JC66">
+            <img src="./assets/casajc66/frame1.webp" alt="imagem capa Pousada Sabina">
         </div>
         <div class="container-slider">
             <div class="slider-wrapper">
@@ -78,28 +78,28 @@
 
         </div>
         <div class="frame2">
-            <img src="./assets/casajc66/frame2.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame3.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame4.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame5.webp" alt="imagem Casa JC66">
+            <img src="./assets/casajc66/frame2.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/casajc66/frame3.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/casajc66/frame4.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/casajc66/frame5.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="frame3">
-            <img src="./assets/casajc66/frame6.webp" alt="imagem Casa JC66">
+            <img src="./assets/casajc66/frame6.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="frame4">
-            <img src="./assets/casajc66/frame7.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame8.webp" alt="imagem Casa JC66">
+            <img src="./assets/casajc66/frame7.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/casajc66/frame8.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="frame5">
-            <img src="./assets/casajc66/frame9.webp" alt="imagem Casa JC66">
+            <img src="./assets/casajc66/frame9.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="frame6">
-            <img src="./assets/casajc66/frame10.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame11.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame12.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame13.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame14.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame15.webp" alt="imagem Casa JC66">
+            <img src="./assets/casajc66/frame10.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/casajc66/frame11.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/casajc66/frame12.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/casajc66/frame13.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/casajc66/frame14.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/casajc66/frame15.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
@@ -273,7 +273,6 @@
 </footer>
 <script src="script-proj.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-
 <script>
   const swiperEl = document.querySelector('swiper-container')
   Object.assign(swiperEl, {
