imgs sabina add

--- a/pousadasabina.html
+++ b/pousadasabina.html
@@ -38,44 +38,19 @@
     </header>
     <main>
         <div class="sobre">
-            <div class="title"><p>Pousada <br> SABINA</p></div>
+            <div class="title"><p>POUSADA <br> SABINA</p></div>
             <div class="about">
-                <h2>EDIFICAÇÃO NOVA</h2>
-                <h3>FOTOS POR ANA MELLO</h3>
+                <h2>INTERIORES</h2>
+                <h3>FOTOS POR:</h3>
+                <h5>@minafotovideo <br>@camislemonde</h5>
                 <p>Projeto: Paloma Siqueira
-                <br>Colaboradores: Vivian Tonglet e Claudio Helzel Local: São Paulo, SP, Brasil
-                <br>Conclusão da Obra: 2012
-                <br>Área do terreno: 611m2
-                <br> Área construída: 435m2
-                <br>Execução: Tiburcio Dias Engenharia
-                <br>Paisagismo: Alice Rocha e Camila Sesma
-                <br>Publicações:
+                <br>Local: Maraú, Bahia, Brasil
+                <br>Conclusão da Obra: 2022
                 </p>
-                <a href="#" alt="Link Casa Abril">Casa Abril</a>
-                <a href="#" alt="Link Revista Projeto Ed. Ago 2016">Revista Projeto Ed. Ago 2016</a>
             </div>
         </div>
         <div class="frame1">
             <img src="./assets/casajc66/frame1.webp" alt="imagem capa Pousada Sabina">
-        </div>
-        <div class="container-slider">
-            <div class="slider-wrapper">
-                <a class="prev" id="arrowSlider1" onclick="plusSlides(-1)">&#10094;</a>
-                <div class="slider">
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-1.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-2.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-4.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-3.jpg" alt=""></div>
-                </div>
-                <div class="slider2-nav">
-                    <a class="dot2" onclick="currentSlide(1)" ></a>
-                    <a class="dot2" onclick="currentSlide(2)" ></a>
-                    <a class="dot2" onclick="currentSlide(3)" ></a>
-                    <a class="dot2" onclick="currentSlide(4)" ></a>
-                </div>
-            <a class="next" id="arrowSlider1" onclick="plusSlides(1)">&#10095;</a> 
-            </div>
-
         </div>
         <div class="frame2">
             <img src="./assets/casajc66/frame2.webp" alt="imagem Pousada Sabina">
@@ -100,6 +75,25 @@
             <img src="./assets/casajc66/frame13.webp" alt="imagem Pousada Sabina">
             <img src="./assets/casajc66/frame14.webp" alt="imagem Pousada Sabina">
             <img src="./assets/casajc66/frame15.webp" alt="imagem Pousada Sabina">
+        </div>
+        <div class="container-slider">
+            <div class="slider-wrapper">
+                <a class="prev" id="arrowSlider1" onclick="plusSlides(-1)">&#10094;</a>
+                <div class="slider">
+                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-1.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-2.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-4.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-3.jpg" alt=""></div>
+                </div>
+                <div class="slider2-nav">
+                    <a class="dot2" onclick="currentSlide(1)" ></a>
+                    <a class="dot2" onclick="currentSlide(2)" ></a>
+                    <a class="dot2" onclick="currentSlide(3)" ></a>
+                    <a class="dot2" onclick="currentSlide(4)" ></a>
+                </div>
+            <a class="next" id="arrowSlider1" onclick="plusSlides(1)">&#10095;</a> 
+            </div>
+
         </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
