--- a/pousadasabina.html
+++ b/pousadasabina.html
@@ -50,46 +50,30 @@
             </div>
         </div>
         <div class="frame1">
-            <img src="./assets/casajc66/frame1.webp" alt="imagem capa Pousada Sabina">
-        </div>
-        <div class="frame2">
-            <img src="./assets/casajc66/frame2.webp" alt="imagem Pousada Sabina">
-            <img src="./assets/casajc66/frame3.webp" alt="imagem Pousada Sabina">
-            <img src="./assets/casajc66/frame4.webp" alt="imagem Pousada Sabina">
-            <img src="./assets/casajc66/frame5.webp" alt="imagem Pousada Sabina">
-        </div>
-        <div class="frame3">
-            <img src="./assets/casajc66/frame6.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/pousadasabina/sabina1_1x.webp" alt="imagem capa Pousada Sabina">
+            <img src="./assets/pousadasabina/unsplash_enhzc6dei0y_1x.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="frame4">
-            <img src="./assets/casajc66/frame7.webp" alt="imagem Pousada Sabina">
-            <img src="./assets/casajc66/frame8.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/pousadasabina/sabina_1.webp" alt="imagem Pousada Sabina">
         </div>
-        <div class="frame5">
-            <img src="./assets/casajc66/frame9.webp" alt="imagem Pousada Sabina">
+        <div class="frame3">
+            <img src="./assets/pousadasabina/sabina_1_1x.webp" alt="imagem Pousada Sabina">
         </div>
-        <div class="frame6">
-            <img src="./assets/casajc66/frame10.webp" alt="imagem Pousada Sabina">
-            <img src="./assets/casajc66/frame11.webp" alt="imagem Pousada Sabina">
-            <img src="./assets/casajc66/frame12.webp" alt="imagem Pousada Sabina">
-            <img src="./assets/casajc66/frame13.webp" alt="imagem Pousada Sabina">
-            <img src="./assets/casajc66/frame14.webp" alt="imagem Pousada Sabina">
-            <img src="./assets/casajc66/frame15.webp" alt="imagem Pousada Sabina">
+        <div class="frame1">
+            <img src="./assets/pousadasabina/sabina_2_1x.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="container-slider">
             <div class="slider-wrapper">
                 <a class="prev" id="arrowSlider1" onclick="plusSlides(-1)">&#10094;</a>
                 <div class="slider">
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-1.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-2.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-4.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-3.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadasabina/sabina_4.webp" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadasabina/sabina_5.webp" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadasabina/sabina_4_1x.webp" alt=""></div>
                 </div>
                 <div class="slider2-nav">
                     <a class="dot2" onclick="currentSlide(1)" ></a>
                     <a class="dot2" onclick="currentSlide(2)" ></a>
                     <a class="dot2" onclick="currentSlide(3)" ></a>
-                    <a class="dot2" onclick="currentSlide(4)" ></a>
                 </div>
             <a class="next" id="arrowSlider1" onclick="plusSlides(1)">&#10095;</a> 
             </div>
